syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rpc.mail";
option java_outer_classname = "SendMailServiceProto";

message SendMailRequest {
	string recipient = 1;
    string title = 2;
    string content = 3;
}

message SendMailResponse {
	int32 code = 1;
	string msg = 2;
}

service SendMailService {
    rpc sendMail (SendMailRequest) returns (SendMailResponse) {}
}












